--- a/views/cancelar.html
+++ b/views/cancelar.html
@@ -1,22 +1,30 @@
-<!-- cancelamento.html -->
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cancelar Inscrição</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="../public/css/cancelar.css">
+    <title>Cancelar Inscrição | InscriVível</title>
 </head>
-<body>
-    <h1>Cancelar Inscrição da Newsletter</h1>
-    <form action="./cancelamento.php" method="post">
-        <label for="email_cancelar">E-mail:</label>
-        <input type="email" id="email_cancelar" name="email" placeholder="Seu e-mail" required>
-        <br><br>
-        
-        <button type="submit">Cancelar Inscrição</button>
-    </form>
 
-    <br>
-    <a href="index.html">Voltar à página de inscrição</a>
+<body>
+    <div class="main-container">
+        <h1 class="cancelar">Cancelar Inscrição</h1>
+        <div class="container">
+            <form action="./cancelamento.php" method="post">
+                <div class="input-group">
+                    <i class="fas fa-envelope"></i>
+                    <input type="email" id="email" name="email" placeholder="Digite seu e-mail" required>
+                </div>
+                <button type="submit" class="btn">Cancelar Inscrição</button>
+            </form>
+            <div class="cancel-link">
+                <a href="../public/index.html">Voltar à página de inscrição</a>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
